--- a/src/style.scss
+++ b/src/style.scss
@@ -16,6 +16,132 @@
   }
 }
 
+.steganographyModal {
+  position: relative;
+  background-color: #127dbb; 
+  padding: 20px; 
+  border-radius: 8px; 
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.imageContainer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 20px; 
+
+  .img-cont { // Container for both images
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+
+    .img1, 
+    div { 
+      flex-basis: 48%; 
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      img.sourcePic { 
+        max-width: 80%;
+        max-height: 80px; 
+        object-fit: contain;
+        margin-bottom: 10px; 
+      }
+
+      img.encodedPic { 
+        max-width: 80%;
+        max-height: 80px; 
+        object-fit: contain;
+        margin-bottom: 10px; 
+      }
+    }
+  }
+}
+
+.downloadButton {
+  padding: 4px 8px; 
+  font-size: 0.75rem; 
+  margin: 10px 0; 
+  border: 1px solid transparent; 
+  background-color: #0b4d71; 
+  color: #fff; 
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: inline-flex; // 
+  align-items: center; // 
+  justify-content: center; 
+  flex-shrink: 0; 
+  min-width: 100px; 
+  height: 30px;
+  border-radius: 10px;
+
+  &:hover {
+    background-color: darken(#06ac1c, 10%);
+  }
+
+
+  // Adjust button size on smaller screens if necessary
+  @media (max-width: 768px) {
+    padding: 2px 6px;
+    font-size: 0.7rem;
+  }
+}
+
+
+
+.encodedText {
+  color: #ffffff; }
+
+.sourcePic{
+  color: #ffffff;
+
+}
+
+.decodedText {
+  color: #ffffff; }
+
+.encodedPic{
+  color: #ffffff;
+}
+
+
+.modalBackdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); // Semi-transparent
+  z-index: 999; // Just below the modal to sit above other content
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.closeModalButton {
+  position: absolute;
+  top: 10px; 
+  right: 10px; 
+  background-color: #f00; 
+  color: #fff; 
+  border: none;
+  border-radius: 50%;
+  width: 30px; 
+  height: 30px; 
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10; 
+  &:hover {
+    background-color: darken(#f00, 10%); 
+  }
+}
+
+
 .showPrivateKeyContainer {
   position: relative;
 
@@ -462,3 +588,4 @@
     }
   }
 }
+
