--- a/src/style.scss
+++ b/src/style.scss
@@ -114,8 +114,8 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); // Semi-transparent
-  z-index: 999; // Just below the modal to sit above other content
+  background-color: rgba(0, 0, 0, 0.5); 
+  z-index: 999; 
   display: flex;
   justify-content: center;
   align-items: center;
@@ -239,10 +239,10 @@
 }
 
 .formContainer {
-  background-image: url('img/background.jpg'); /* 指向图片的路径 */
-  background-size: cover; /* 背景图片覆盖整个容器 */
-  background-repeat: no-repeat; /* 不重复背景图片 */
-  background-position: center center; /* 背景图片居中显示 */
+  background-image: url('img/background.jpg'); 
+  background-size: cover; 
+  background-repeat: no-repeat; 
+  background-position: center center; 
   // background-color: #CCEACB;
   height: 100vh;
   display: flex;
@@ -358,10 +358,10 @@
 
 .home {
   // background-color: #E1F2E8;
-  background-image: url('img/backgroundHome.jpg'); /* 指向图片的路径 */
-  background-size: cover; /* 背景图片覆盖整个容器 */
-  background-repeat: no-repeat; /* 不重复背景图片 */
-  background-position: center center; /* 背景图片居中显示 */
+  background-image: url('img/backgroundHome.jpg'); 
+  background-size: cover; 
+  background-repeat: no-repeat; 
+  background-position: center center; 
   height: 100vh;
   display: flex;
   align-items: center;
@@ -696,16 +696,16 @@ button:hover {
   }
 }
 
-/* 登录界面样式结束 */
+
 .social-login {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 10px; // 调整这个值来控制间距
+  gap: 10px; 
 }
 .social-buttons {
   display: flex;
-  gap: 10px; // 按钮之间的间隙
+  gap: 10px; 
 }
 
 .social-button {
@@ -719,10 +719,8 @@ button:hover {
   outline: none;
 
   .social-icon {
-    width: 24px; // 控制图标的宽度
-    height: auto; // 自动调整高度以保持比例
+    width: 24px; 
+    height: auto; 
   }
 }
 
-
-//个人信息
