--- a/src/style.scss
+++ b/src/style.scss
@@ -571,6 +571,7 @@ $white: #ffffff;
             color: gray;
             font-weight: 300;
 
+
             img {
               width: 40px;
               height: 40px;
@@ -904,4 +905,29 @@ button:hover {
   border-radius: 50%;
   cursor: pointer;
   margin-right: 10px; /* Spacing */
+}
+
+.timestamp{
+  padding-top: 5px;
+  position: relative;
+  font-size: 10px;
+  font-weight: 600;
+  color: #666;
+}
+.expiry {
+  background-color: rgba(255, 0, 0, 0.659);
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-right: 8px;
+  padding-left: 8px;
+  border-radius: 10px;
+  animation: blinker 1s linear infinite;
+  position: relative;
+  font-size: 10px;
+  color: white;
+}
+@keyframes blinker {
+  40% {
+    opacity: 60%;
+  }
 }
